# poa-consensus

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  print.html  rustfmt.toml  searcher-09f2665d.js  searchindex-0eb0b959.js  toc-a82fcd50.js  toc.html
.github/workflows/: ci.yml  docs.yml
algorithm/: adaptive.html  banded-dp.html  consensus-extraction.html  graph-construction.html  multi-allele.html  overview.html
bench/: compare_callers.py  hg002_real_data.py  validate.py
cli/: basic-usage.html  installation.html  str-workflow.html
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/algorithm/: adaptive.md  banded-dp.md  consensus-extraction.md  graph-construction.md  multi-allele.md  overview.md
docs/src/cli/: basic-usage.md  installation.md  str-workflow.md
examples/: network_plot.rs
src/: analysis.rs  config.rs  error.rs  flank.rs  graph.rs  lib.rs  main.rs  orient.rs  plot.rs  seed.rs  tests.rs  types.rs
tests/: accuracy.rs  adaptive_band_collapse.rs  analysis_diagnostics.rs  band_width_zero_unbanded.rs  cli.rs  comparison.rs  flank_sweep.rs  generate_plots.rs  multi_allele_periodic_phasing.rs  plot.rs  reuse_back_edge_cycle.rs  seed_sensitivity_family.rs  speed.rs  sv_analysis.rs
tests/fixtures/: adaptive_band_collapse_gaa55.fa  noisy.fa  partial.fa  reuse_back_edge_cag50.fa  simple.fa  two_allele.fa
