[package]
name = "poa-consensus"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Banded Partial Order Alignment (POA) consensus for short tandem repeat and amplicon reads"
license = "MIT"
repository = "https://github.com/Psy-Fer/poa-consensus"
homepage = "https://github.com/Psy-Fer/poa-consensus"
documentation = "https://docs.rs/poa-consensus"
readme = "README.md"
authors = ["James Ferguson <j.ferguson@garvan.org.au>"]
keywords = ["bioinformatics", "consensus", "alignment", "genomics", "nanopore"]
categories = ["science", "algorithms"]

[lib]
name = "poa_consensus"
path = "src/lib.rs"

[[bin]]
name = "poa-consensus"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:noodles"]
plot = ["dep:kuva"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
noodles = { version = "0.109", features = ["fasta", "fastq"], optional = true }
kuva = { version = "0.1.6", optional = true }

[dev-dependencies]